@@ -21,6 +21,8 @@ import org.apache.http.client.methods.HttpPost;
 import org.apache.http.client.methods.HttpPut;
 import org.apache.http.client.methods.HttpUriRequest;
 import org.apache.http.client.params.ClientPNames;
+import org.apache.http.entity.mime.MultipartEntity;
+import org.apache.http.entity.mime.content.InputStreamBody;
 import org.apache.http.impl.client.DefaultHttpClient;
 import org.apache.http.impl.conn.tsccm.ThreadSafeClientConnManager;
 import org.apache.http.message.BasicNameValuePair;
@@ -142,27 +144,28 @@ public class DeploymentService {
 	}
 
 	private boolean basicDeploy(Deployment deployment, Server server) {
-		Validate.notNull(this.fileService.getContentsOfSnapshot(new Long(deployment.getSnapshot().getApplication().getId()).toString(), new Long(deployment.getSnapshot().getId()).toString()));
-		if (deployment.getSnapshot().getFlows().isEmpty()) {
+		String applicationId = Long.valueOf(deployment.getSnapshot().getApplication().getId()).toString();
+		String snapshotId = Long.valueOf(deployment.getSnapshot().getId()).toString();
+		
+		InputStream snapshotFileIS = this.fileService.getContentsOfSnapshot(applicationId, snapshotId);
+
+		if (snapshotFileIS == null) {
 			return false;
 		}
 		
-		String contextJSON = deployment.getSnapshot().getFlows().get(0).getJson();
 		String url = "http://" + server.getIpDNS() + ":" + server.getPort()
-				+ "/service/server/start";
+				+ "/service/server/" + applicationId + "/start";
 		
-		Validate.notNull(this.fileService.getContentsOfSnapshot(new Long(deployment.getSnapshot().getApplication().getId()).toString(), new Long(deployment.getSnapshot().getId()).toString()));
-
 		HttpPost post = new HttpPost(url);
 		InputStream is = null;
+		
 		try {
-			List<NameValuePair> urlParameters = new ArrayList<NameValuePair>();
-			urlParameters.add(new BasicNameValuePair("contextDefinition", contextJSON));
-			post.setEntity(new UrlEncodedFormEntity(urlParameters));
+			MultipartEntity entity = new MultipartEntity();
+			entity.addPart("applicationZip", new InputStreamBody(snapshotFileIS, "application"));
+			post.setEntity(entity);
 			
 			HttpResponse response = this.execute(post);
 			int statusCode = response.getStatusLine().getStatusCode();
-			
 			
 			if (statusCode >= 200 && statusCode < 300) {
 				is = response.getEntity().getContent();
@@ -180,6 +183,31 @@ public class DeploymentService {
 		return false;		
 	}
 
+	@Transactional
+	public void addCache(long deploymentId, String contextId, String elementId) {
+		Deployment deployment = this.repository.get(Deployment.class, deploymentId);
+		
+		for (Server server : deployment.getServers()) {
+			String url = "http://" + server.getIpDNS() + ":" + server.getPort()
+					+ "/service/server/" + contextId + "/cache/" + elementId;
+			HttpPost method = new HttpPost(url);
+			
+			try {
+				List<NameValuePair> urlParameters = new ArrayList<NameValuePair>();
+				//TODO set the parameters
+				urlParameters.add(new BasicNameValuePair("memcachedURL", "127.0.0.1:11211"));
+				urlParameters.add(new BasicNameValuePair("keyExpression", "message.properties['actions.http.productId']"));
+				urlParameters.add(new BasicNameValuePair("cacheExpressions", "message.payload"));
+				urlParameters.add(new BasicNameValuePair("ttl", "30"));
+				method.setEntity(new UrlEncodedFormEntity(urlParameters));
+
+				this.execute(method);
+			} catch (Exception e) {
+				log.warn("Error removing profiler", e);
+			}
+		}
+	}
+	
 	@Transactional
 	public void addProfiler(long deploymentId, String contextId, String elementId) {
 		Deployment deployment = this.repository.get(Deployment.class, deploymentId);
@@ -202,7 +230,7 @@ public class DeploymentService {
 		
 		for (Server server : deployment.getServers()) {
 			String url = "http://" + server.getIpDNS() + ":" + server.getPort()
-					+ "/service/server/start/" + contextId + "/profile/" + elementId;
+					+ "/service/server/" + contextId + "/profile/" + elementId;
 			HttpDelete method = new HttpDelete(url);
 			try {
 				this.execute(method);
@@ -233,7 +261,87 @@ public class DeploymentService {
 					partialResults.put(json);
 				}
 			} catch (Exception e) {
-				log.warn("Error removing profiler", e);
+				log.warn("Error getting profiler", e);
+			} finally {
+				IOUtils.closeQuietly(is);
+			}
+		}
+		
+		JSONObject result = new JSONObject();
+		try {
+			result.put("servers", partialResults);
+		} catch (JSONException e) {
+			log.warn("Error writing json", e);
+		}
+		
+		return result;
+	}
+	
+	@Transactional
+	public void addLogger(
+			long deploymentId, 
+			String contextId,
+			String elementId, 
+			String beforeExpression, 
+			String afterExpression) {
+		Deployment deployment = this.repository.get(Deployment.class, deploymentId);
+
+		for (Server server : deployment.getServers()) {
+			String url = "http://" + server.getIpDNS() + ":" + server.getPort()
+					+ "/service/server/" + contextId + "/log/" + elementId;
+			HttpPost method = new HttpPost(url);
+			
+			List<NameValuePair> urlParameters = new ArrayList<NameValuePair>();
+			urlParameters.add(new BasicNameValuePair("beforeExpression", beforeExpression));
+			urlParameters.add(new BasicNameValuePair("afterExpression", afterExpression));
+
+			try {
+				method.setEntity(new UrlEncodedFormEntity(urlParameters));
+				this.execute(method);
+			} catch (Exception e) {
+				log.warn("Error adding logger", e);
+			}
+		}
+	}
+
+	@Transactional
+	public void removeLogger(long deploymentId, String contextId, String elementId) {
+		Deployment deployment = this.repository.get(Deployment.class, deploymentId);
+		
+		for (Server server : deployment.getServers()) {
+			String url = "http://" + server.getIpDNS() + ":" + server.getPort()
+					+ "/service/server/" + contextId + "/log/" + elementId;
+			HttpDelete method = new HttpDelete(url);
+			try {
+				this.execute(method);
+			} catch (Exception e) {
+				log.warn("Error removing logger", e);
+			}
+		}		
+	}
+
+	@Transactional
+	public JSONObject getLogger(long deploymentId, String contextId, String elementId) {
+		Deployment deployment = this.repository.get(Deployment.class, deploymentId);
+		
+		JSONArray partialResults = new JSONArray();
+		
+		for (Server server : deployment.getServers()) {
+			String url = "http://" + server.getIpDNS() + ":" + server.getPort()
+					+ "/service/server/" + contextId + "/log/" + elementId;
+			
+			HttpGet method = new HttpGet(url);
+			InputStream is = null;
+			try {
+				HttpResponse response = this.execute(method);
+				int statusCode = response.getStatusLine().getStatusCode();
+				is = response.getEntity().getContent();
+				if (statusCode >= 200 && statusCode < 300) {
+					JSONObject json = new JSONObject(IOUtils.toString(is));
+					partialResults.put(json);
+				}
+			} catch (Exception e) {
+				log.warn("Error getting logger", e);
 			} finally {
 				IOUtils.closeQuietly(is);
 			}
